--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "poxy-stylus",
-  "version": "0.0.1",
-  "description": "POXY",
-  "main": "poxy.import.stylus",
+  "version": "0.0.2",
+  "description": "Stylus mixins and utilities",
+  "main": "poxy.styl",
   "repository": {
     "type": "git",
     "url": "https://github.com/paulwooddesign/poxy-stylus.git"
   },
   "dependencies": {
+    "stylus": "0.49.x"
   },
   "keywords": [
     "grid",
@@ -23,5 +24,5 @@
       "email": "paulwooddesign@gmail.com"
     }
   ],
-  "directories": {},
+  "directories": {}
 }
